[package]
name = "mercury-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "zstd", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }